--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
   <!-- The <body> element contains everything that will appear on the page. -->
   <body>
-<h1>nope</h1>
+<h1>This is hard</h1>
+
+<h3>Hi, Babe! :D</h3>
 
 
 
