--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- The <title> element appears in the broswer tab. It's also used by search engines.
     Title best practices are here: https://moz.com/learn/seo/title-tag -->
-    <title>_______INSERT TITLE HERE______</title>
+    <title>Forrest L. Self</title>
 
     <!-- This <meta> element provides a description of your page. It's mostly used by search engines.
     Description best practices are here: https://moz.com/learn/seo/meta-description -->
