--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
 
   <!-- The <body> element contains everything that will appear on the page. -->
   <body>
-<h1>This is hard</h1>
+<h1>Das Design </h1>
 
-<h3>Hi, Babe! :D</h3>
-
-<p>This is a change</p>
+<div class="intro">
+  <p>Design is all around us. We see it the moment we wake up to the moment we fall asleep.</p>
 
 
 
