--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="description" content="_______________INSERT_DECRIPTION_HERE_______________">
 
     <!-- This <link> element points to our CSS stylesheet. This says, 'Look in the folder called CSS for the file called styles.css. -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css.css">
 
   </head>
 
