--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <h1>Das Design </h1>
 
 <div class="intro">
-  <p>Design is all around us. We see it the moment we wake up to the moment we fall asleep.</p>
+  <p>Design is all around us. We see it the moment we wake up to the moment we fall asleep. We see while we eat. We see it while we drive (don't do this, it isn't smart). We see it while we use the restroom. Again, design is everywhere. But what makes it good? What makes us want to see it so many times in a day? Good design, in one word, is simple. </p>
 
 
 
