added all paragraphs

--- a/index.html
+++ b/index.html
@@ -33,6 +33,25 @@
 <div class="intro">
   <p>Design is all around us. We see it the moment we wake up to the moment we fall asleep. We see while we eat. We see it while we drive (don't do this, it isn't smart). We see it while we use the restroom. Again, design is everywhere. But what makes it good? What makes us want to see it so many times in a day? Good design, in one word, is simple. </p>
 
+  </div>
+
+  <div class="simpleuse">
+    <p>Now, yes, simple is broad term. What do I mean by simple? Again, there are many aspects to it. The first is, it is simple to use. Objects that have a complicated design are, frankly, incredibly annoying. Make it clear what you want your user to do. Do not make them guess on where to click or where to drag. If you want them to click somewhere, make it very obvious that is what you want them to do.</p>
+  </div>
+
+    <div class="font">
+      <p>Aside from making it easy to use, you want to make it easy to understand. This is more about the content you are writing and want the user to read. Do not use crazy fonts, you something simple that the majority of computers have. For the most part, stick to black text. White is a very small exception. Keep things short. We live in an era where people hate reading long articles, stories or posts. Keep your information short and just get to the point. Eliminate fluff.</p>
+    </div>
+
+      <div class="color">
+        <p>Everyone loves color. Color excited people. Color makes people feel warm. Yet, color can make your eyes hurt. When picking colors, be smart. Stay away from bright colors for your background, keep those for small pop of color areas. Colors can become distracting on many levels. Neutral colors work best for backgrounds or just the main color in general.</p>
+      </div>
+
+        <div class="outro">
+          <p>So, you want to design. Go for it. Have fun and enjoy it. Design is for everyone and there is no right or wrong way. The only thing that should be kept in mind, is the need to keep your design simple. Simple is key. Simple is your friend.</p>
+        </div>
+        
+
 
 
 
