--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     </div>
 
       <div class="color">
-        <p>Everyone loves color. Color excited people. Color makes people feel warm. Yet, color can make your eyes hurt. When picking colors, be smart. Stay away from bright colors for your background, keep those for small pop of color areas. Colors can become distracting on many levels. Neutral colors work best for backgrounds or just the main color in general.</p>
+        <p>Everyone loves color. Color excites people. Color makes people feel warm. Yet, color can make your eyes hurt. When picking colors, be smart. Stay away from bright colors for your background, keep those for small pop of color areas. Colors can become distracting on many levels. Neutral colors work best for backgrounds or just the main color in general.</p>
       </div>
 
         <div class="outro">
           <p>So, you want to design. Go for it. Have fun and enjoy it. Design is for everyone and there is no right or wrong way. The only thing that should be kept in mind, is the need to keep your design simple. Simple is key. Simple is your friend.</p>
         </div>
-        
+
 
 
 
