--- a/index.html
+++ b/index.html
@@ -1,62 +1,123 @@
-<!-- This is a comment. It's just a note to yourself -- it doesn't appear on the page. -->
-
-<!-- This line tells the browser what kind of HTML we're writing. It's like saying, 'Hey, I'm going to be speaking in English.' -->
-<!doctype html>
-
-<!-- Our first element is <html>. It contains everything for our page. -->
+<!DOCTYPE html>
 <html>
-
-  <!-- The <head> element contains information about our page. It doesn't actually appear on the page. -->
   <head>
-
-    <!-- This element tells the browser how our text is formatted. You should include it, but you don't need to worry about it. -->
-    <meta charset="utf-8" />
-
-    <!-- The <title> element appears in the broswer tab. It's also used by search engines.
-    Title best practices are here: https://moz.com/learn/seo/title-tag -->
-    <title>Forrest L. Self</title>
-
-    <!-- This <meta> element provides a description of your page. It's mostly used by search engines.
-    Description best practices are here: https://moz.com/learn/seo/meta-description -->
-    <meta name="description" content="_______________INSERT_DECRIPTION_HERE_______________">
-
-    <!-- This <link> element points to our CSS stylesheet. This says, 'Look in the folder called CSS for the file called styles.css. -->
-    <link rel="stylesheet" href="css/styles.css">
-
+    <title>Takeoff App Prototype</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS file comes first. -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- Your CSS file comes second. -->
+    <link rel="stylesheet" href="styles.css">
   </head>
-
-
-  <!-- The <body> element contains everything that will appear on the page. -->
   <body>
-<h1>Das Design </h1>
-<hr>
 
-<div class="intro">
-  <p>Design is all around us. We see it the moment we wake up to the moment we fall asleep. We see while we eat. We see it while we drive (don't do this, it isn't smart). We see it while we use the restroom. Again, design is everywhere. But what makes it good? What makes us want to see it so many times in a day? Good design, in one word, is simple. </p>
+    <!-- Everything goes in div.container or div.container-fluid -->
+    <div class="container">
 
-  </div>
+      <!-- All your columns go inside .row -->
+      <div class="card border-light mb-3" style="max-width: 22rem;">
+    <div class="card-body">
+      <div class="card-header">AT&T</div>
+      <div class="card-header-right"> <img src="battery.png"></div>
+      <h1 class="card-title">9:30</h1>
+      <h6>Sunday, February 25</h6>
+    </br>
+  </br>
+      <p class="card-text">Your flight <strong>UA #2345</strong> departs from <strong>ABIA</strong> today at <strong>12:30 p.m.</strong> Make sure you are ready and now what to expect!</p>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
 
-  <div class="simpleuse">
-    <p>Now, yes, simple is broad term. What do I mean by simple? Again, there are many aspects to it. The first is, it is simple to use. Objects that have a complicated design are, frankly, incredibly annoying. Make it clear what you want your user to do. Do not make them guess on where to click or where to drag. If you want them to click somewhere, make it very obvious that is what you want them to do.</p>
-  </div>
-
-    <div class="font">
-      <p>Aside from making it easy to use, you want to make it easy to understand. This is more about the content you are writing and want the user to read. Do not use crazy fonts, you something simple that the majority of computers have. For the most part, stick to black text. White is a very small exception. Keep things short. We live in an era where people hate reading long articles, stories or posts. Keep your information short and just get to the point. Eliminate fluff.</p>
+      <a href="#" class="card-link-left"><img src="flashlight.png" /></a>
+      <a href="#" class="card-link-right"><img src="camera.png" /> </a>
     </div>
 
-      <div class="color">
-        <p>Everyone loves color. Color excites people. Color makes people feel warm. Yet, color can make your eyes hurt. When picking colors, be smart. Stay away from bright colors for your background, keep those for small pop of color areas. Colors can become distracting on many levels. Neutral colors work best for backgrounds or just the main color in general.</p>
-      </div>
+  </div>
+  <!-- Inside App Page -->
+  <div class="card border-light mb-3" style="max-width: 22rem;">
+<div class="card-body">
+  <div class="card-header">12:31</div>
+  <div class="card-header-right"> <img src="battery.png"></div>
 
-        <div class="outro">
-          <p>So, you want to design. Go for it. Have fun and enjoy it. Design is for everyone and there is no right or wrong way. The only thing that should be kept in mind, is the need to keep your design simple. Simple is key. Simple is your friend.</p>
-        </div>
+  <h3 class="card-title">Your Flight Info:</h3>
+  <table>
+      <tr>
+        <td><strong>Departure</strong></td>
+        <td><strong>Date</strong></td>
+      </tr>
+      <tr>
+        <td>12:30 p.m.</td>
+        <td>Tues, Feb. 26</td>
+      </tr>
+      <tr>
+        <td><strong>Gate</strong></td>
+        <td><strong>Check-In</strong></td>
+      </tr>
+      <tr>
+        <td>16</td>
+        <td class="checkin">10 minutes</td>
+      </tr>
+      <tr>
+        <td><strong>TSA</strong></td>
+        <td><strong>Time to Airport</strong></td>
+      </tr>
+      <tr>
+        <td class="tsa">35 minutes</td>
+        <td>53 minutes</td>
+      </tr>
+  </table>
+
+  <h3>Arrival Desination Info:</h3>
+  <table>
+      <tr>
+        <td><strong>Arrival</strong></td>
+        <td><strong>Gate</strong></td>
+      </tr>
+      <tr>
+        <td>3:00 p.m.</td>
+        <td>21</td>
+      </tr>
+      <tr>
+        <td><strong>Baggage</strong></td>
+        <td><strong>Weather</strong></td>
+      </tr>
+      <tr>
+        <td>21</td>
+        <td>16 - <img class="snow" src="snow.png"> </td>
+      </tr>
+    </table>
+
+</br>
+</br>
+</br>
+
+
+
+<button type="button" class="btn btn-secondary btn-lg btn-block">Home</button>
+<button type="button" class="btn btn-secondary btn-lg btn-block">Edit Flight</button>
+</div>
+
+</div>
 
 
 
 
-
-
+    <!-- These are just javaScript files that Bootstrap needs. Include them on every page, right before the </body> tag. -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
-
 </html>
