--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
   </div>
   <!-- Inside App Page -->
   <div class="card border-light mb-3" style="max-width: 22rem;">
-<div class="card-body">
+<div class="card-body" id="app">
   <div class="card-header">12:31</div>
   <div class="card-header-right"> <img src="battery.png"></div>
 
-  <h3 class="card-title">Your Flight Info:</h3>
+  <h3 class="card-title">Your FlightInfo:</h3>
   <table>
       <tr>
         <td><strong>Departure</strong></td>
@@ -98,16 +98,12 @@
         <td>21</td>
         <td>16 - <img class="snow" src="snow.png"> </td>
       </tr>
-    </table>
-
-</br>
-</br>
-</br>
-
-
-
-<button type="button" class="btn btn-secondary btn-lg btn-block">Home</button>
-<button type="button" class="btn btn-secondary btn-lg btn-block">Edit Flight</button>
+  </table>
+    </br>
+    </br>
+    </br>
+    <button type="button" class="btn btn-secondary btn-lg btn-block">Home</button>
+    <button type="button" class="btn btn-secondary btn-lg btn-block">Edit Flight</button>
 </div>
 
 </div>
