--- a/v2.html
+++ b/v2.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS file comes first. -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Your CSS file comes second. -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles2.css">
     <script src="flight.js" defer></script>
   </head>
   <body>
