--- a/v2.html
+++ b/v2.html
@@ -114,7 +114,7 @@
 </div>
 
 <h3>Takeoff App</h3>
-<p>This is an example of a paragraph.</p>
+<p class="statement">This is an example of a paragraph.</p>
 
     <!-- These are just javaScript files that Bootstrap needs. Include them on every page, right before the </body> tag. -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
