--- a/v2.html
+++ b/v2.html
@@ -23,7 +23,7 @@
       <div class="card-header">AT&T</div>
       <div class="card-header-right"> <img src="battery.png"></div>
     <div class="first">
-      <h1 class="card-title">9:30</h1>
+      <h1 class="card-title">11:30 a.m.</h1>
       <h6>Sunday, February 25</h6>
     </br>
   </br>
@@ -49,7 +49,7 @@
   <div class="card border-light mb-3" style="max-width: 22rem;">
 <div class="card-body" id="app">
 
-  <div class="card-header">12:31</div>
+  <div class="card-header">11:31 a.m.</div>
   <div class="card-header-right"> <img src="battery.png"></div>
 
   <h3 class="card-title">Your Flight Info:</h3>
