--- a/v2.html
+++ b/v2.html
@@ -23,7 +23,7 @@
       <div class="card-header">AT&T</div>
       <div class="card-header-right"> <img src="battery.png"></div>
     <div class="first">
-      <h1 class="card-title">11:30 a.m.</h1>
+      <h1 class="card-title">11:30</h1>
       <h6>Sunday, February 25</h6>
     </br>
   </br>
@@ -35,6 +35,7 @@
 
     </br>
     </br>
+      <br>
 
   </div>
 
