--- a/surprise/index.html
+++ b/surprise/index.html
@@ -5,7 +5,9 @@
 
   <body>
     <h1>Hi, there babe!</h1>
-    <p>This is your own personal website</p>
+    <p>This is your own personal website!</p>
+
+    <p>I will try my best to make sure I update it as much as I can! :D</p>
 
 
 
