--- a/dataproject/index.html
+++ b/dataproject/index.html
@@ -15,7 +15,25 @@
       </div>
 
       <div id="viz2">
+      </div>
+
+      <article>
+      <div id="viz_holder">
+        <div class="viz_controls">
+          <form id="form1" action="">
+            <select name="airportLocation" id="airportLocation">
+              <option value="All">All</option>
+            </select>
+          </form>
+        </div>
+        <div id="viz"></div>
 
       </div>
+      <div class="text">
+        <p>
+           Remix this project and modify it so that the user can select a type of crime from the dropdown and see where those crimes are located on the map.
+        </p>
+      </div>
+    </article>
   </body>
 </html>
