--- a/dataproject/index.html
+++ b/dataproject/index.html
@@ -26,7 +26,7 @@
             </select>
           </form>
         </div>
-        <div id="viz"></div>
+        <div id="viz3"></div>
 
       </div>
       <div class="text">
