--- a/dataproject/index.html
+++ b/dataproject/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello!</title>
+    <title>Data Vizualization</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +10,7 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <h1>hello<h1>
+    <h1>Comparing the growth of the airports in Austin and San Antonio<h1>
       <div  id="viz">
       </div>
 
