--- a/dataproject/index.html
+++ b/dataproject/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/styles.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdn.glitch.com/501b06a0-c0b9-4444-bc44-327800ab4479%2Fplotly-latest.min.js?1521484933194"></script>
     <script src="script.js" defer></script>
   </head>
