--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -1,15 +1,30 @@
 <html>
   <head>
     <title>Big Airports in Small Cities</title>
+    <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <!-- Bootstrap CSS file comes first. -->
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+   <!-- Your CSS file comes second. -->
+   <link rel="stylesheet" href="css/styles.css">
+   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+   <link rel="stylesheet" href="css/styles.css">
+   <script src="scripts.js" defer></script>
+ </head>
 
-    </head>
 
   <body>
 
+<div class="row">
     <h1>Big Airports in Small Cities - Forrest Logan Self<h1>
+      <div class="col-md-6">
+            <p><span id="dropcap1">T</span>The city of Austin continues to grow at exponential rates. Austin is repeatedly at the top of the list for one of the fastest growing cities in the country and has been the fastest growing metropolitan between 2010 and 2017. According to a report by the Austin Chamber, Austin sees growth of roughly 55,500 people per year or 152 per day.</p>
+      </div>
 
 
-
+</div>
 
 
 
