--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -53,6 +53,24 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-md">
+          <form id="form1" onchange="drawChart()">
+       <select id="thedropdown">
+       <option value="2013">2013</option>
+       <option value="2014">2014</option>
+       <option value="2015">2015</option>
+       <option value="2016">2016</option>
+       <option value="2017">2017</option>
+       <option value="2018">2018</option>
+     </select>
+   </form>
+
+   <div class="grahp"></div>
+
+        </div>
+      </div>
+
 
 </div>
 
