--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="row">
       <div class="col-md-6">
-        <h1>Big Airports in Small Cities</h1>
+        <h1>The Rise of Small Airports</h1>
         <h3>Forrest Logan Self</h3>
       </div>
       <div class="col-md-6">
@@ -94,6 +94,13 @@
               </div>
             </div>
 
+            <div class="row">
+              <div class="col-md">
+                <div id="viz3">
+                </div>
+              </div>
+
+            </div>
 
 </div>
 
