--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -22,7 +22,7 @@
         <h3>Forrest Logan Self</h3>
       </div>
       <div class="col-md-6">
-        <img src="abia.jpg">
+        <img src="departurehall.png">
         <h6>This is an example of a caption.</h6>
       </div>
 
@@ -95,7 +95,7 @@
       <p>"It's fun for us to bring that Live Music Capital of the world into the airport," Williams said. "It's what we are known for. The other thing is food. The food is phenomenal in Austin, so why wouldn't you bring that into an airport?"</p>
 
       <p>But as they continue to grow, will this be something they can continue to do? Williams says yes, and no. Keeping the Austin culture is important and is something they will continue to implement. Just as important as it is to bring in local aspects, bringing in more chain options are also important. </p>
-      
+
         <p>ABIA is no longer going to be the small regional airport it once was. As the expansion continues, the number of people traveling through will also increase. It will be crucial to keep in mind not everyone will know local Austin products, so to ensure all passengers are comfortable there will have to be at least some chain restaurants. </p>
             </div>
             <div class="col-md-6" id="paragraph">
