--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -56,7 +56,7 @@
 
         <p>Nashville (BNA), Tampa (TPA) and Salt Lake City (SLC) are the airports the at ABIA is looking at when it comes to inspiration according to Williams. BNA and TPA currently serve around the same amount as ABIA and SLC serves nearly 30 million, which is the airport that ABIA looks to for inspiration for the future.</p>
 
-        <p>Airports such as Seattle (SEA), Minneapolis (MSP) and Kansas City (MCI) are also airports that are located in cities that have less than a million people. The ratio of population to passengers SEA sees is # to # while MSP is # to #.</p>
+        <p>Airports such as Seattle (SEA), Minneapolis (MSP) and Kansas City (MCI) are also airports that are located in cities that have less than a million people.</p>
 
         <p>So why is this? What makes this the cause for the majority of these cities? While there may be a number of reasons, one may be because of the locations. The majority of these cities are in locations where they are the only major city to serve a large portion of individuals. SEA is the only major airport in Washington; therefore, the amount of people they serve is very high. The same kind of concept is seen in SLC, with the closest major city being Denver, which is roughly 525 miles.</p>
 
